--- a/app/src/main/res/layout/layout_store_order_serviceinfo.xml
+++ b/app/src/main/res/layout/layout_store_order_serviceinfo.xml
@@ -127,6 +127,7 @@
         </LinearLayout>
 
         <ImageView
+            android:visibility="gone"
             android:id="@+id/iv_more"
             android:layout_width="@dimen/dimen_20dp"
             android:layout_height="@dimen/dimen_20dp"
