--- a/app/src/main/res/values/widget.xml
+++ b/app/src/main/res/values/widget.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <style name="zhy_tablayout_textstyle" parent="@android:style/TextAppearance.Holo.Large">
+        <item name="android:textColor">@color/zhy_text_color_1</item>
+        <item name="android:textSize">@dimen/dimen_32dp</item>
+    </style>
     <style name="orderlist_item_title_textStyle" parent="@android:style/Widget.TextView">
         <item name="android:textColor">#696969</item>
         <item name="android:textSize">@dimen/dimen_24dp</item>
@@ -129,5 +132,24 @@
         <item name="android:paddingTop">@dimen/dimen_14dp</item>
         <item name="android:paddingBottom">@dimen/dimen_14dp</item>
         <item name="android:background">@color/white</item>
+    </style>
+
+
+    <style name="order_button_level_1">
+        <item name="android:layout_marginLeft">@dimen/dimen_8dp</item>
+        <item name="android:layout_marginRight">@dimen/dimen_8dp</item>
+        <item name="android:textSize">@dimen/dimen_28dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/zhy_button_state_5</item>
+    </style>
+
+    <style name="order_button_level_2">
+        <item name="android:layout_marginLeft">@dimen/dimen_8dp</item>
+        <item name="android:layout_marginRight">@dimen/dimen_8dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">@dimen/dimen_28dp</item>
+        <item name="android:textColor">@color/zhy_text_color_1</item>
+        <item name="android:background">@drawable/zhy_button_state_2</item>
     </style>
 </resources>
