--- a/app/src/main/res/layout/activity_goods_query.xml
+++ b/app/src/main/res/layout/activity_goods_query.xml
@@ -77,10 +77,12 @@
 
         <com.shian.shianlife.view.goods.GoodsShoppingCartButton
             android:id="@+id/bt_goods_shopping_cart"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/dimen_120dp"
+            android:layout_height="@dimen/dimen_120dp"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"></com.shian.shianlife.view.goods.GoodsShoppingCartButton>
+            android:layout_alignParentRight="true"
+            android:src="@drawable/zhy_goods_shopping_cart"></com.shian.shianlife.view.goods.GoodsShoppingCartButton>
+
     </RelativeLayout>
 
     <com.shian.shianlife.view.drawerlayout.GoodsQueryDrawerLayout
