--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -178,7 +178,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:text="清楚缓存"
+                android:text="清除缓存"
                 android:textColor="@color/dimgray"
                 android:textSize="@dimen/dimen_24dp" />
 
