--- a/app/src/main/res/layout/activity_store_service.xml
+++ b/app/src/main/res/layout/activity_store_service.xml
@@ -19,7 +19,11 @@
             android:layout_height="@dimen/dimen_88dp"
             android:layout_gravity="center_horizontal"
             app:layout_scrollFlags="scroll|enterAlways"
+
             app:tabIndicatorColor="@color/white"
+            app:tabGravity="fill"
+            app:tabMaxWidth="0dp"
+            app:tabMode="fixed"
             app:tabSelectedTextColor="@color/white"
             app:tabTextAppearance="@style/zhy_tablayout_textstyle"
             app:tabTextColor="@color/white"></android.support.design.widget.TabLayout>
