--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -70,6 +70,7 @@
     <color name="zhy_text_color_23">#989898</color>
     <color name="zhy_text_color_24">#8a8a8a</color>
     <color name="zhy_text_color_25">#c3c3c3</color>
+    <color name="zhy_text_color_26">#8c8c8c</color>
 
     <color name="zhy_title_color_1">#3baf92</color>
     <color name="zhy_rb_check_1">#ededed</color>
