--- a/app/src/main/res/layout/layout_goods_main_recommend.xml
+++ b/app/src/main/res/layout/layout_goods_main_recommend.xml
@@ -20,9 +20,14 @@
         app:tabTextAppearance="@style/zhy_tablayout_text_style_3"
         app:tabTextColor="@color/zhy_text_color_16"></com.shian.shianlife.view.tablayout.CustomTabLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_6dp"
+        android:background="@color/zhy_backgroud_1" />
+
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_80dp"
-        android:background="@color/account_blue"></android.support.v4.view.ViewPager>
+        android:layout_height="wrap_content"
+        android:background="@color/white"></android.support.v4.view.ViewPager>
 </LinearLayout>
