--- a/app/src/main/res/layout/activity_goods_details.xml
+++ b/app/src/main/res/layout/activity_goods_details.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context="com.shian.shianlife.activity.goods.GoodsDetailsActivity">
 
+
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
@@ -26,22 +27,7 @@
 
             <include layout="@layout/layout_good_details_title"></include>
 
-            <ImageView
-                android:id="@+id/iv_pic_back"
-                android:layout_width="@dimen/dimen_80dp"
-                android:layout_height="@dimen/dimen_80dp"
-                android:layout_marginLeft="@dimen/dimen_16dp"
-                android:layout_marginTop="@dimen/dimen_16dp"
-                android:src="@drawable/ic_back_default_2" />
 
-            <ImageView
-                android:id="@+id/iv_pic_share"
-                android:layout_width="@dimen/dimen_80dp"
-                android:layout_height="@dimen/dimen_80dp"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="@dimen/dimen_16dp"
-                android:layout_marginTop="@dimen/dimen_16dp"
-                android:src="@drawable/ic_share" />
         </RelativeLayout>
 
     </android.support.design.widget.AppBarLayout>
@@ -82,6 +68,29 @@
 
 
     </android.support.v4.widget.NestedScrollView>
+
+    <RelativeLayout
+        android:id="@+id/rl_title"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_100dp">
+
+        <ImageView
+            android:id="@+id/iv_pic_back"
+            android:layout_width="@dimen/dimen_80dp"
+            android:layout_height="@dimen/dimen_80dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/dimen_16dp"
+            android:src="@drawable/ic_back_default_2" />
+
+        <ImageView
+            android:id="@+id/iv_pic_share"
+            android:layout_width="@dimen/dimen_80dp"
+            android:layout_height="@dimen/dimen_80dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="@dimen/dimen_16dp"
+            android:src="@drawable/ic_share" />
+    </RelativeLayout>
 
     <include layout="@layout/layout_goods_details_buttons"></include>
 
