--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -147,6 +147,43 @@
                 android:textColor="@color/gray_main_rb_bg_f"
                 android:textSize="@dimen/dimen_24dp"
                 android:visibility="gone" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_forget_password"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/zhy_button_state_ll_white"
+                    android:paddingBottom="@dimen/dimen_16dp"
+                    android:paddingRight="@dimen/dimen_16dp"
+                    android:paddingTop="@dimen/dimen_16dp"
+                    android:text="忘记密码"
+                    android:textColor="@color/zhy_text_color_1"
+                    android:textSize="@dimen/dimen_28dp" />
+
+                <TextView
+                    android:layout_width="@dimen/dimen_2dp"
+                    android:layout_height="@dimen/dimen_32dp"
+                    android:layout_gravity="center_vertical"
+                    android:background="@color/zhy_text_color_1" />
+
+                <TextView
+                    android:id="@+id/tv_no_password"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/zhy_button_state_ll_white"
+                    android:paddingBottom="@dimen/dimen_16dp"
+                    android:paddingLeft="@dimen/dimen_16dp"
+                    android:paddingTop="@dimen/dimen_16dp"
+                    android:text="没有账户和密码？"
+                    android:textColor="@color/zhy_text_color_1"
+                    android:textSize="@dimen/dimen_28dp" />
+            </LinearLayout>
         </LinearLayout>
 
         <ImageView
@@ -154,7 +191,6 @@
             android:layout_height="@dimen/dimen_262dp"
             android:layout_centerHorizontal="true"
             android:src="@drawable/login_log_2" />
-
 
 
     </RelativeLayout>
